Configuraciones/Azure/KNative/pre-requisites.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heroes-kn-ns
  labels:
    istio-injection: enabled
